--- a/flame-front/package.json
+++ b/flame-front/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "availity-reactstrap-validation": "^2.6.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "material-ui": "^0.20.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-icon": "^1.0.0",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
